# axdbg

./: .gitmodules  CMakeLists.txt  README.md  debugmanager.cpp  debugmanager.h  main.cpp
translation/: cs_CZ.ts  en_US.ts
widgets/: commandswidget.cpp  commandswidget.h  logswidget.cpp  logswidget.h  mainwindow.cpp  mainwindow.h  preferencesdialog.cpp  preferencesdialog.h
widgets/ui/: commandswidget.ui  logswidget.ui  preferencesdialog.ui
